--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3-01/int06-11-3-01.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3-01/int06-11-3-01.component.html
@@ -2,7 +2,7 @@
 <div class="ui grid">
   <div class="sixteen wide column">
     <div class="ui top  attached header segment" style="background: #1e83db;color: white">
-      <span>ใบเบิกเงินสวัสดิการเกี่ยวกับการศึกษาบุตร</span>
+      <span>บันทึกคำขอเบิกเงินสวัสดิการเกี่ยวกับการศึกษาบุตร (แบบ 7223)</span>
     </div>
     <!-- form upload -->
     <div class="ui attached center {{loading ? 'loading' : ''}} segment">
