--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-3/int06-11-3.component.html
@@ -487,8 +487,8 @@
       <div class="sixteen wide column">
         <button class="ui  primary button" type="submit"  [ngClass]="{ 'disabled': tableUpload.length < 1 }">
           <i class="save icon"></i>บันทึก</button>
-        <button class="ui yellow button" type="button">
-          <i class="print icon"></i>ส่งออก</button>
+        <!-- <button class="ui yellow button" type="button">
+          <i class="print icon"></i>ส่งออก</button> -->
         <button class="ui button" type="button" routerLink='/int06/11'>
           <i class="close icon"></i>ยกเลิก</button>
       </div>
