--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3-2/ope04-3-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-3/ope04-3-2/ope04-3-2.component.html
@@ -1,3 +1,34 @@
-<p>
-  ope04-3-2 works!
-</p>
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
+<div class="ui grid">
+  <div class="sixteen wide column">
+    <h2 class="ui header">ผลการตรวจสอบกระดาษทำการตรวจนับวัตถุดิบคงเหลือ</h2>
+
+    <div class="ui top attached header segment" style="background: #1e83db;color: white">
+      <span>ระบุรายละเอียดกระดาษทำการ</span>
+    </div>
+    <div class="ui attached segment">
+      <table id="dataTable" class="ui small celled table striped selectable nowrap" style="width: 100%">
+        <thead>
+          <tr>
+            <th class="text-center">ลำดับที่</th>
+            <th class="text-center">รายการ</th>
+            <th class="text-center">ใบกำกับภาษี</th>
+            <th class="text-center">บัญชีประจำวัน</th>
+            <th class="text-center">งบเดือน</th>
+            <th class="text-center">จำนวนรับน้ำมัน</th>
+            <th class="text-center">ค่าสูงสุดของข้อมูล</th>
+            <th class="text-center">ผลต่างของคู่ข้อมูล</th>
+          </tr>
+        </thead>
+
+      </table>
+      
+      <div class="ui stackable center aligned page grid">
+        <button class="mini button ui" type="button" routerLink="/ope04/3-1"><i class="reply icon"></i>กลับ</button>
+      </div>
+      <br>
+    </div>
+
+  </div>
+</div>
