--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/follow-supervision/follow-supervision.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/follow-supervision/follow-supervision.component.html
@@ -22,7 +22,7 @@
             <div class="four wide field ui calendar" id="date1">
               <div class="ui input left icon">
                 <i class="calendar alter nate outline icon"></i>
-                <input type="calendar" id="date" name="date" [(ngModel)]="obj.date" >
+                <input type="calendar" id="date" name="date" [(ngModel)]="obj.date" autocomplete="off">
               </div>
             </div>
           </div>
