--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-2/cop01-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-2/cop01-2.component.html
@@ -11,7 +11,7 @@
         <div class="inline fields">
           <div class="four wide field "></div>
           <div class="two wide field ">
-            <label>ปีงบประมาณ </label>
+            <label>ประจำปี </label>
           </div>
           <div class="ui calendar" id="calendar">
             <div class="ui input left icon">
