--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop01/cop01-3/cop01-3.component.html
@@ -13,7 +13,7 @@
           <table id="dataTable" style="width: 100%;" class="ui small collapsing celled table aligned hover striped selectable">
             <thead>
               <tr>
-                <th style="text-align: center">ปีงบประมาณ</th>
+                <th style="text-align: center">ประจำปี</th>
                 <th style="text-align: center">วันที่จัดทำเเผน</th>
                 <th style="text-align: center">เรื่อง</th>
                 <th style="text-align: center">เเสดง</th>
