--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/cop02-1-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop02/cop02-1/cop02-1-1/cop02-1-1.component.html
@@ -18,7 +18,7 @@
           <div class="field">
             <div class="ui radio checkbox">
               <input type="radio" name="fruit" tabindex="0" class="hidden">
-              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปีงบประมาณ 2555
+              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปี 2555
               </label>
             </div>
           </div>
@@ -28,7 +28,7 @@
           <div class="field">
             <div class="ui radio checkbox">
               <input type="radio" name="fruit" checked="" tabindex="0" class="hidden">
-              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปีงบประมาณ 2556
+              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปี 2556
               </label>
             </div>
           </div>
@@ -38,7 +38,7 @@
           <div class="field">
             <div class="ui radio checkbox">
               <input type="radio" name="fruit" checked="" tabindex="0" class="hidden">
-              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปีงบประมาณ 2557
+              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปี 2557
               </label>
             </div>
           </div>
@@ -48,7 +48,7 @@
           <div class="field">
             <div class="ui radio checkbox">
               <input type="radio" name="fruit" checked="" tabindex="0" class="hidden">
-              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปีงบประมาณ 2558
+              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปี 2558
               </label>
             </div>
           </div>
@@ -58,7 +58,7 @@
           <div class="field">
             <div class="ui radio checkbox">
               <input type="radio" name="fruit" checked="" tabindex="0" class="hidden">
-              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปีงบประมาณ 2559
+              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปี 2559
               </label>
             </div>
           </div>
@@ -68,7 +68,7 @@
           <div class="field">
             <div class="ui radio checkbox">
               <input type="radio" name="fruit" checked="" tabindex="0" class="hidden">
-              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปีงบประมาณ 2560
+              <label>- การวิเคราะห์ข้อมูลรายได้ ตามแผนการตรวจสอบภาษี ประจำปี 2560
               </label>
             </div>
           </div>
