--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop06/cop06-1/cop06-1-2/cop06-1-2.component.html
@@ -14,7 +14,7 @@
             
           <div class="inline fields">
               <div class="three wide field ">
-                <label class="text-right full-width">ประจำปีงบประมาณ</label>
+                <label class="text-right full-width">ประจำปี</label>
               </div>
               <div class="four wide field column">
                 <div class="ui calendar" id="date" style="width: 100%;">
