--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-1/cop09-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop09/cop09-1/cop09-1.component.html
@@ -15,7 +15,7 @@
 
         <div class="three wide field"></div>
         <div class="three wide field">
-          <label>สรุปผลการตรวจปฏิบัติการประจำปีงบประมาณ</label>
+          <label>สรุปผลการตรวจปฏิบัติการประจำปี</label>
         </div>
         <div class="four wide field column">
           <div class="ui calendar" id="date" style="width: 100%;">
