--- a/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop10/cop10.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/check-operation/cop10/cop10.component.html
@@ -3,7 +3,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <br>
 <div class="sixteen wide column">
-  <h2 class="ui header">กราฟแผนการตรวจปฏิบัติการประจำปีงบประมาณ</h2>
+  <h2 class="ui header">กราฟแผนการตรวจปฏิบัติการประจำปี</h2>
 
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
     <span>ระบุเงื่อนไขในการค้นหา</span>
@@ -17,7 +17,7 @@
 
         <div class="three wide field"></div>
         <div class="three wide field">
-          <label>แผนการตรวจปฏิบัติการประจำปีงบประมาณ</label>
+          <label>แผนการตรวจปฏิบัติการประจำปี</label>
         </div>
         <div class="four wide field column">
           <div class="ui calendar" id="date" style="width: 100%;">
@@ -40,7 +40,7 @@
   </div>
   <br>
   <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-    <span>กราฟแผนการตรวจปฏิบัติการประจำปีงบประมาณ</span>
+    <span>กราฟแผนการตรวจปฏิบัติการประจำปี</span>
   </div>
   <div class="ui attached segment">
     <br>
