--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -1,10 +1,10 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">สร้างกระดาษทำการคัดเลือกราย</h2>
+        <h2 class="ui header">กำหนดเงื่อนไขเพื่อวิเคราะห์ความเสี่ยง</h2>
 
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>สร้างกระดาษทำการคัดเลือกราย</span>
+            <span>กำหนดเงื่อนไขเพื่อวิเคราะห์ความเสี่ยง</span>
         </div>
 
         <div class="ui attached segment">
