--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -195,7 +195,7 @@
                     <a class="item " [routerLink]="[ '/add-external-data/approve-line-user'] " *ngIf="authService.renderByPage('/add-external-data/approve-line-user')"
                         routerLinkActive="active ">รายการที่เลือก </a>
                     <a class="item " [routerLink]="[ '/add-external-data/summary-report'] " *ngIf="authService.renderByPage('/add-external-data/summary-report')"
-                        routerLinkActive="active ">ตรวจสอบรายการตอบกลับ </a>
+                        routerLinkActive="active ">ตรวจสอบการเลือกรายผู้ประกอบการ</a>
 
                 </div>
             </div>
