--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/approve-line-user/approve-line-user.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/approve-line-user/approve-line-user.component.html
@@ -1,10 +1,10 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
   <div class="sixteen wide column">
-    <h2 class="ui header"> {{jobTitle}}</h2>
-
+    <!-- <h2 class="ui header"> {{jobTitle}}</h2> -->
+    <h2 class="ui header">รายผู้ประกอบการที่ถูกเลือก</h2>
     <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-      <span>รายการที่เลือก</span>
+      <span>รายผู้ประกอบการที่ถูกเลือก</span>
     </div>
 
     <div class="ui attached segment">
