--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -193,7 +193,7 @@
                     <a class="item " [routerLink]="[ '/add-external-data/receive-line-user'] " *ngIf="authService.renderByPage('/add-external-data/receive-line-user')"
                         routerLinkActive="active ">รับกระดาษทำการคัดเลือกราย </a>
                     <a class="item " [routerLink]="[ '/add-external-data/approve-line-user'] " *ngIf="authService.renderByPage('/add-external-data/approve-line-user')"
-                        routerLinkActive="active ">รายที่เลือก </a>
+                        routerLinkActive="active ">รายผู้ประกอบการที่ถูกเลือก</a>
                     <a class="item " [routerLink]="[ '/add-external-data/summary-report'] " *ngIf="authService.renderByPage('/add-external-data/summary-report')"
                         routerLinkActive="active ">ตรวจสอบการเลือกรายผู้ประกอบการ</a>
 
@@ -206,7 +206,7 @@
                     <!-- <a class="item " routerLinkActive="active ">รวบรวมข้อมูลเบื้องต้น </a> -->
                     <!-- <a class="item " [routerLink]="[ 'tax-audit-manage'] " routerLinkActive="active ">ขออนุมัติออกตรวจสอบภาษี</a> -->
                     <a class="item " *ngIf="authService.renderByPage('select-form/บริการ/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน')" [routerLink]="[ '/select-form/บริการ/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน'] " routerLinkActive="active ">สร้างกระดาษทำการตรวจสอบภาษี</a>
-                    <a class="item " *ngIf="authService.renderByPage('select-form/rs001')" [routerLink]="[ '/select-form/rs001'] " routerLinkActive="active ">ผลการสร้างกระดาษทำการ</a>
+                    <a class="item " *ngIf="authService.renderByPage('select-form/rs001')" [routerLink]="[ '/select-form/rs001'] " routerLinkActive="active ">ผลการสร้างกระดาษทำการตรวจสอบภาษี</a>
                     <a class="item "  [routerLink]="['/ope04/11'] " *ngIf="authService.renderByPage('/ope04/11')" routerLinkActive="active ">รายงานผลการตรวจสอบ</a>
                     <!-- <a class="item " routerLinkActive="active ">สรุปผลการตรวจสอบภาษี</a> -->
                 </div>
