--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/result-select-form/result-select-form.component.html
@@ -1,7 +1,7 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">ผลการตรวจสอบภาษี</h2>
+        <h2 class="ui header">ผลการสร้างกระดาษทำการตรวจสอบภาษี</h2>
         <div class="ui segment">
             <div class="ui grid">
                 <div class="sixteen wide column">
