--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/add-external-data/add-external-data.component.html
@@ -1,10 +1,10 @@
 <app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">เพิ่มข้อมูลภายนอก</h2>
+        <h2 class="ui header">ส่งกระดาษทำการคัดเลือกราย</h2>
 
         <div class="ui top centered attached header segment" style="background: #1e83db;color: white">
-            <span>เพิ่มข้อมูลภายนอก</span>
+            <span>ส่งกระดาษทำการคัดเลือกราย</span>
         </div>
 
         <div class="ui attached segment">
