--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-011/ope04-011.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-011/ope04-011.component.html
@@ -4,10 +4,10 @@
     <h2 class="ui header">รายงานผลการตรวจสอบ</h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
-      <span>ระบุรายละเอียดกระดาษทำการ</span>
+      <span>ระบุรายละเอียด</span>
     </div>
     <div class="ui attached segment {{loading ? 'loading' : ''}}">
-      <form class="ui form" id="form" [formGroup]="formControl" (submit)="search()">
+      <form class="ui form" id="form" [formGroup]="formControl" (submit)="save()">
         <!-- row 1 -->
         <div class="inline fields  ui grid">
           <div class="three wide field required">
@@ -21,10 +21,10 @@
             </select>
           </div>
           <div class="three wide field ">
-            <label class="text-right full-width">เลขประจำตัวผู้เสียภาษี</label>
+
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" formControlName="userNumber" disabled name="userNumber">
+
           </div>
         </div>
 
@@ -34,13 +34,13 @@
             <label class="text-right full-width">ผู้ประกอบการ</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled formControlName="companyName" name="companyName">
+            <input type="text" class="custom-readonly"  formControlName="companyName" name="companyName" id="companyName" disabled>
           </div>
           <div class="three wide field ">
             <label class="text-right full-width">เลขที่วิเคราะห์</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled formControlName="anlysisNumber" name="anlysisNumber">
+            <input type="text" class="custom-readonly"  formControlName="anlysisNumber" name="anlysisNumber" id="anlysisNumber" disabled>
           </div>
         </div>
 
@@ -50,23 +50,23 @@
             <label class="text-right full-width">ประเภท</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled formControlName="type" name="type">
+            <input type="text" class="custom-readonly"  formControlName="type" name="type" id="type" disabled>
           </div>
           <div class="three wide field ">
             <label class="text-right full-width">พิกัด</label>
           </div>
           <div class="four wide field ">
-            <input type="text" class="custom-readonly" disabled formControlName="subType" name="subType">
+            <input type="text" class="custom-readonly"  formControlName="subtype" name="subtype" id="subtype" disabled>
           </div>
         </div>
 
         <!-- row 4 -->
         <div class="inline fields  ui grid">
-          <div class="three wide field ">
+          <div class="three wide field required">
             <label class="text-right full-width">ภาษีที่ต้องชำระเพิ่ม</label>
           </div>
-          <div class="four wide field ">
-            <input type="text" name="payTax">
+          <div class="four wide field " [ngClass]="{ 'error': submitted && f.addedTax.invalid }">
+            <input type="text" formControlName="addedTax" name="addedTax" id="addedTax" numberOnly>
           </div>
           <div class="three wide field ">
 
@@ -78,11 +78,11 @@
 
         <!-- row 5 -->
         <div class="inline fields  ui grid">
-          <div class="three wide field ">
+          <div class="three wide field required">
             <label class="text-right full-width">เบี้ยปรับ</label>
           </div>
-          <div class="four wide field ">
-            <input type="text" name="fine">
+          <div class="four wide field " [ngClass]="{ 'error': submitted && f.fine.invalid }">
+            <input type="text" formControlName="fine" name="fine" id="fine" numberOnly>
           </div>
           <div class="three wide field ">
 
@@ -93,11 +93,11 @@
         </div>
         <!-- row 6 -->
         <div class="inline fields  ui grid">
-          <div class="three wide field ">
+          <div class="three wide field required">
             <label class="text-right full-width">เงินเพิ่ม</label>
           </div>
-          <div class="four wide field ">
-            <input type="text" name="money">
+          <div class="four wide field " [ngClass]="{ 'error': submitted && f.extraMoney.invalid }">
+            <input type="text" formControlName="extraMoney" name="extraMoney" id="extraMoney" numberOnly>
           </div>
           <div class="three wide field ">
 
@@ -109,20 +109,12 @@
         <br><br>
         <div class="ui stackable center aligned page grid">
           <button class="ui mini primary button" type="submit"><i class="file outline icon"></i>
-            แสดงกระดาษทำการ</button>
+            บันทึก</button>
           <button class="ui mini gray button" type="button" (click)="claer()"><i class="sync icon"></i>
             ล้างข้อมูล</button>
         </div><br>
       </form>
     </div>
     <br>
-    <div class="ui grid center aligned">
-      <div class="sixteen wide column">
-        <button class="ui mini button" routerLink="/select-form/สินค้า/สินค้าน้ำมันและผลิตภัณฑ์น้ำมัน">
-          <i class="reply icon"></i>
-          ย้อนกลับ
-        </button>
-      </div>
-    </div>
   </div>
 </div>
