--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int06/int06-11/int06-11-5/int06-11-5.component.html
@@ -11,12 +11,12 @@
                 <div class="one wide field">
                 </div>
 
-                <div class="two wide field">
+                <div class="five wide field">
                     <label class="text-right full-width">แบบขอเบิก</label>
                 </div>
 
-                <div class="five wide field">
-                    <select class="ui dropdown ai search full-width" formControlName="withdrawRequest">
+                <div class="five wide field" [ngClass]="{ 'error': validateField('withdrawRequest') }">
+                    <select class="ui dropdown ai search full-width" formControlName="withdrawRequest" (change)="disabledBtn()">
                       <option value="">กรุณาเลือก</option>
                       <option *ngFor="let wdr of withdrawRequestList | async;" [value]="wdr.lovId">
                         {{ wdr.typeDescription }}
@@ -24,7 +24,7 @@
                     </select>
                 </div>
 
-                <div class="two wide field">
+                <!-- <div class="two wide field">
                     <label class="text-right full-width">สถานะการดำเนินการ</label>
                 </div>
 
@@ -35,7 +35,7 @@
                         {{ st.subTypeDescription }}
                       </option>
                     </select>
-                </div>
+                </div> -->
             </div>
             <br>
             <div class="ui center aligned grid">
@@ -92,7 +92,7 @@
             </div>
 
             <div class="two wide field">
-                <input class="custom-readonly disabled" type="text" autocomplete="off">
+                <input class="custom-readonly disabled" id="process" type="text" autocomplete="off">
             </div>
 
             <div class="one wide field">
@@ -109,7 +109,7 @@
             </div>
 
             <div class="two wide field">
-                <input class="custom-readonly disabled" type="text" autocomplete="off">
+                <input class="custom-readonly disabled" id="pass" type="text" autocomplete="off">
             </div>
 
             <div class="one wide field">
@@ -126,7 +126,7 @@
             </div>
 
             <div class="two wide field">
-                <input class="custom-readonly disabled" type="text" autocomplete="off">
+                <input class="custom-readonly disabled" id="notPass" type="text" autocomplete="off">
             </div>
 
             <div class="one wide field">
@@ -137,7 +137,50 @@
         <br>
         <div class="ui center aligned grid">
             <div class="sixteen wide column">
-                <button class="ui mini primary button" type="submit"><i class="save icon"></i>ทำใบขอเบิก</button>
+                <button class="ui mini primary button" type="button" (click)="total($event)" [ngClass]="{'disabled': !checkBtn1}">
+                    <i class="save icon"></i>ทำใบขอเบิก
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+<br>
+<br>
+<div id="showTable">
+    <div class="ui top centered attached header segment" style="background: #1e83db;color: white;">
+        <span>ผลการค้นหา</span>
+    </div>
+    <div class="ui form">
+        <div class="ui attached segment">
+            <table id="dataTable" class="ui small celled table aligned hover striped selectable" style="width:100%">
+                <thead>
+                    <tr>
+                        <th class="text-center">เลขที่ทำการ</th>
+                        <th class="text-center">เลขที่ใบขอเบิก</th>
+                        <th class="text-center">ผู้สร้างใบขอเบิก</th>
+                        <th class="text-center">ตำแหน่ง</th>
+                        <th class="text-center">สังกัด</th>
+                        <th class="text-center">วันที่สร้างใบขอเบิก</th>
+                        <th class="text-center">จำนวนเงินที่ขอเบิก</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="text-center">{{groupData.id}}</td>
+                        <td class="text-center">{{groupData.billLading===''? '-':groupData.billLading}}</td>
+                        <td>{{groupData.createdBy}}</td>
+                        <td>{{groupData.position}}</td>
+                        <td class="{{groupData.affiliation===''?'text-center':''}}">{{groupData.affiliation===''?'-':groupData.affiliation}}</td>
+                        <td class="text-center">{{groupData.createdDateStr}}</td>
+                        <td class="text-right">{{groupData.amount}}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <br>
+            <div class="ui center aligned grid">
+                <div class="sixteen wide column">
+                    <button class="ui mini primary button" type="button" (click)="save($event)" [ngClass]="{'disabled': !checkBtn2}"><i class="save icon"></i>บันทึก</button>
+                </div>
             </div>
         </div>
     </div>
